third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/key/without-value-5.stderr
TOML parse error at line 1, column 6
  |
1 | fs.fw
  |      ^
expected `.`, `=`
